sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '<-' expected but '=' found.
		for(i=0; i<getNombreValeurs(); i++) {
                     ^AlgBubbleSort1:6: error: illegal start of simple expression
		for(i=0; i<getNombreValeurs(); i++) {
                       ^AlgBubbleSort1:6: error: '<-' expected but ';' found.
		for(i=0; i<getNombreValeurs(); i++) {
                                             ^AlgBubbleSort1:6: error: illegal start of simple pattern
		for(i=0; i<getNombreValeurs(); i++) {
                                                  ^AlgBubbleSort1:14: error: illegal start of simple expression
      }while( inverse )
      ^